fix(provisioning): compute-provider readiness gate — confirm RUNNING before success, fail+free-slot on timeout (#230)